# rust-demo

./: .gitpod.yml  Cargo.toml  README.md  build.rs
c_src/: example.c
config/: my_config.json
src/: lib.rs  main.rs
