[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # Specifies our build script

[build-dependencies]
cc = "1.0"  # C compiler helper crate
serde_json = "1.0"  # For parsing JSON configs

[dependencies]
libc = "0.2"  # For C type bindings
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }